:bug: Decrease z-index of footer and sidebar-toggle
This fixed the related issue #2309

--- a/frontend/scss/components/atoms/sidebar-toggle.scss
+++ b/frontend/scss/components/atoms/sidebar-toggle.scss
@@ -59,7 +59,7 @@ $originalEasing: cubic-bezier(0,0,.21,1);
 
   &-label {
     position: fixed;
-    z-index: 16;
+    z-index: 15;
     font-size: 12px;
     @include txt-font-accent;
     color: color('white');
